// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Support inline mixins 1`] = `
.c0 .my-mixin {
  color: red;
}

.c0 .class {
  color: red;
  background: white;
}

<div
  className="c0"
  color="red"
/>
`;

exports[`Test mixin variable 1`] = `
.c0 .class1 {
  color: red;
}

<div
  className="c0"
/>
`;

exports[`Test simple mixin guards 1`] = `
.c0 .classTrue {
  color: green;
}

<div
  className="c0"
/>
`;
